--- a/Gesture_Recognition_Case_Study.ipynb
+++ b/Gesture_Recognition_Case_Study.ipynb
@@ -13,8 +13,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "sNSe1mrEFRRG",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "sNSe1mrEFRRG"
    },
    "source": [
     "## Import Python Packages"
@@ -22,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "id": "bqozkfNgFRRG"
    },
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "id": "p5vQdDATFRRH"
    },
@@ -66,8 +65,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "-fLL7LGwFRRI",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "-fLL7LGwFRRI"
    },
    "source": [
     "## Set Project Location and Batch Size"
@@ -491,8 +489,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "EhZZFqSGFRRQ",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "EhZZFqSGFRRQ"
    },
    "source": [
     "### Experiment 1"
@@ -981,8 +978,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "YYE4gWlhFRRV",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "YYE4gWlhFRRV"
    },
    "source": [
     "### Experiment 2"
@@ -1448,14 +1444,13 @@
    },
    "source": [
     "**Insights:**\n",
-    "Adam has reduced overfitting. However since the accuracy has been constantly improving we might need to increase the number of epochs in a later experiment"
+    "Since the accuracy has been constantly improving we might need to increase the number of epochs in a later experiment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "MW-AuWW9FRRX",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "MW-AuWW9FRRX"
    },
    "source": [
     "### Experiment 3"
@@ -1920,8 +1915,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ew_NnIH8FRRX",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "ew_NnIH8FRRX"
    },
    "source": [
     "### Experiment 4"
@@ -2429,7 +2423,7 @@
    },
    "source": [
     "**Insights:**\n",
-    "After 35 epochs the training and validation accuracy changes to 92% and 69% respectively"
+    "After 35 epochs the training and validation accuracy changes to 85% and 71% respectively"
    ]
   },
   {
