--- a/Gesture_Recognition_Case_Study.ipynb
+++ b/Gesture_Recognition_Case_Study.ipynb
@@ -13,7 +13,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "sNSe1mrEFRRG"
+    "id": "sNSe1mrEFRRG",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## Import Python Packages"
@@ -65,7 +66,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "-fLL7LGwFRRI"
+    "id": "-fLL7LGwFRRI",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## Set Project Location and Batch Size"
@@ -131,8 +133,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "xHJ5mD3qFRRJ",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "xHJ5mD3qFRRJ"
    },
    "source": [
     "## Generator\n",
@@ -142,7 +143,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "-WJJ6Q90FRRK"
+    "id": "-WJJ6Q90FRRK",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Utility function to resize the images"
@@ -171,7 +173,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "4QW8F-ZlFRRK"
+    "id": "4QW8F-ZlFRRK",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Generator Function"
@@ -489,7 +492,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "EhZZFqSGFRRQ"
+    "id": "EhZZFqSGFRRQ",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Experiment 1"
@@ -978,7 +982,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "YYE4gWlhFRRV"
+    "id": "YYE4gWlhFRRV",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Experiment 2"
@@ -1915,7 +1920,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ew_NnIH8FRRX"
+    "id": "ew_NnIH8FRRX",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Experiment 4"
@@ -4264,7 +4270,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Insights"
    ]
@@ -4392,8 +4400,37 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "After doing all the experiments, we finalized **Model 3**\n",
+    "\n",
+    "**Parameters used:**\n",
+    "* total_frames = 30\n",
+    "* num_frames = 10\n",
+    "* gestures = 5\n",
+    "* image_height = 50\n",
+    "* image_width = 50\n",
+    "* batch_size = 4\n",
+    "* filter size = (3,3,3)\n",
+    "* Optimizer = Adam(learning_rate=0.0002)\n",
+    "* Dropout(0.25)\n",
+    "* num_epochs=25\n",
+    "\n",
+    "**Reason:**\n",
+    "* **Training Accuracy:** 0.83%\n",
+    "* **Validation Accuracy:** 0.79%\n",
+    "* A **drop out rate of 0.25** gives up a better training and validation accuracy\n",
+    "* Underfitting resolved and better accuracy score as compared to other models"
+   ]
   }
  ],
  "metadata": {
